<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:src="@drawable/footer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="@color/colorAccent"
                android:background="@color/bgTransparent"
                android:gravity="center"
                android:textSize="@dimen/content_text" />

            <ImageView
                android:id="@+id/frontpicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/frontpicture" />

        </LinearLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/store_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bgTransparent"
            android:padding="@dimen/content_padding">

            <TextView
                android:id="@+id/storeaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/store"
                android:drawablePadding="@dimen/text_view_drawable_padding"
                android:text="@string/store_address"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/storenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="@dimen/text_view_drawable_padding"
                android:text="@string/store_phone"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/storesite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/website"
                android:drawablePadding="@dimen/text_view_drawable_padding"
                android:text="@string/web_site"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawablePadding="@dimen/text_view_drawable_padding"
                android:text="@string/store_hours"
                android:drawableLeft="@drawable/schedule"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_margin="@dimen/content_padding"
                android:layout_alignRight="@id/store_info"
                android:background="@android:color/white"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>